prevent flicker bug, add sharp package & add placeholder data

--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -17,10 +17,6 @@
     display: grid;
     max-width: 510px;
 
-    .title {
-      margin-bottom: $spacing5;
-    }
-
     h1 {
       margin-bottom: $spacing4;
     }
