--- a/global_components/Layout/MobileNav/MobileNav.module.scss
+++ b/global_components/Layout/MobileNav/MobileNav.module.scss
@@ -4,4 +4,8 @@
   position: absolute;
   top: 0;
   right: 0;
+
+  @media screen and (min-width: $desktop) {
+    display: none;
+  }
 }
